kmymoney/plugins/views/reports/core/tests/querytable-test.h
@@ -43,6 +43,7 @@ private Q_SLOTS:
   void testBalanceColumn();
   void testBalanceColumnWithMultipleCurrencies();
   void testTaxReport();
+  void testProtectedMethods();
 };
 
 #endif
